Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-83133
Fusion style does not ask SH_UnderlineShortcut from proxy style
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P2: Important
Fix Version/s:
5.15.0 Beta3
Affects Version/s:
5.14.1
Component/s:
Widgets: Styles
Labels:
Reported_by_support_standard
Commits:
7eb7bb979e2921e711eef03a9ea31af305935cac (qt/qtbase/5.15)
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Timur Pocheptsov
Reporter:
Joni Poikelin
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
27 Mar '20 10:33
Updated:
30 Mar '20 09:22
Resolved:
30 Mar '20 09:22
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Fix Fusion style ignoring SH_UnderlineShortcut from proxy style
Gerrit Review: